# open-resume-api

./: .gitignore  .replit  COMPREHENSIVE_RESUME_SUCCESS.md  DEPENDENCIES.md  Dockerfile  ESSENTIAL_FILES.md  PERFECT_MATCH_RESULTS.md  README.md  SETUP.md  compare_resumes.py  complete_excel_parser.py  config.example.json  config.json  constants.py  docker-compose.prod.yml  docker-compose.yml  excel_to_openresume_parser.py  fix_validation_and_generate.py  main.py  openresume_bridge.js  openresume_pdf_generator.js  package-lock.json  package.json  parsed_resume_data.json  pdf_comparison_analyzer.py  perfect_match_resume.json  perfect_match_tester.py  pyproject.toml  real_openresume_integration.js  replit.md  requirements.txt  test_api_validation.py  test_openresume_integration.py  test_pranav_resume.json  test_pranav_validation.py  test_resume.json  updated_comprehensive_sample.json  validated_resume.json
api/: endpoints.py
models/: resume_models.py
services/: config_manager.py  openresume_wrapper.py  pdf_generator.py
static/: index.html
templates/: resume_template.py
utils/: validators.py
